fixed activities recommended html footer having small white space on left right

--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,10 @@ body {
   height: 100vh;
 }
 
+img{
+  height: 100%;
+}
+
 .extra{
   height: 90%;
 }
